# senior-project

./: README.md
university_support_system/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.a2a-app-gpu-all.yml  docker-compose.a2a-app-gpu.yml  docker-compose.a2a-existing-infra-academic-specialists.yml  docker-compose.a2a-existing-infra-academic.yml  docker-compose.a2a-existing-infra-capabilities.yml  docker-compose.a2a-existing-infra-finance-specialists.yml  docker-compose.a2a-existing-infra-student-specialists.yml  docker-compose.a2a-existing-infra-student.yml  docker-compose.a2a-existing-infra.yml  docker-compose.a2a-full.yml  docker-compose.a2a.yml  docker-compose.slack.yml  docker-compose.yml  implementation_plan.md  pyproject.toml  requirements.txt  university_support.dump
university_support_system/docker/: Dockerfile.dynamic-local  ollama-bootstrap.sh
university_support_system/docs/: A2A_ANNOUNCEMENT_EVENT_KARAR_NOTU.md  A2A_DAGITIK_MIMARI_VE_CALISMA_OZETI.md  A2A_GECIS_PLANI.md  A2A_TOPLU_MIMARI_PLANI.md  ARCHITECTURE.md  AZURE_VM_RUNBOOK.md  CACHE_STRATEJISI.md  CODEX_PROJE_BAGLAMI.md  DEMO_GUIDE.md  DINAMIK_KURUM_PLATFORMU_NOTU.md  DOKUMANTASYON_OKUMA_SIRASI.md  DOKUMAN_ENVANTERI_VE_ARSIV_ADAYLARI.md  DYNAMIC_PLATFORM.md  FAZ_0_KONTROLLU_MIMARI_OMURGA_PLANI.md  FAZ_0_TEKNIK_DOKUMANTASYON.md  FAZ_1_TEKNIK_DOKUMANTASYON.md  FAZ_2_TEKNIK_DOKUMANTASYON.md  FAZ_3_AJAN_MIMARISI.md  FAZ_5_LEGACY_DECISION_LAYER_AUDIT.md  FAZ_6_DECISION_CONTRACT_RUNTIME_SPINE.md  FAZ_7_CONTRACT_FIRST_SPECIALIST_SELECTOR.md  FAZ_8_GOLDEN_TRACE_SELECTOR_VISIBILITY.md  FAZ_9_BRANCH_DISPATCH_CONTRACT_GATE.md  KURULUM_VE_CALISTIRMA.md  MART_2026_GUNCELLEME_NOTLARI.md  MIMARI_DENETIM_DOGRULAMA_VE_AKSIYON_PLANI_20260516.md  NISAN_2026_ROUTING_FOLLOWUP_GUNCELLEME_NOTLARI.md  NVIDIA_API_MODEL_DENEME_NOTLARI.md  PROJE_ANATOMISI_KILAVUZU.md  RAPORA_EKLENECEK_NOTLAR.md  SCRIPTS_VE_TESTLER_ENVANTERI.md  SETUP.md  SISTEM_DENETIM_BULGULARI_20260428.md  SISTEM_DERIN_DENETIM_PLANI.md  SLACK.md  SLACK_ENTEGRASYON.md  TUM_PROJE_KOD_ANALIZI.md  demo_runbook.md  kapsamli_chromadb_kilavuzu.md  quality_benchmark_report_20260409_212052.md  (+61 more)
university_support_system/migrations/: env.py
university_support_system/scripts/: a2a_docker_stack_smoke.py  a2a_external_mock_smoke.py  a2a_http_canary.py  a2a_main_http_smoke.py  a2a_main_shadow_smoke.py  a2a_model_cache_check.py  a2a_rollout.py  a2a_two_process_smoke.py  analyze_reranker_scores.py  announcement_benchmark.py  audit_academic_source_coverage.py  audit_document_corpus.py  audit_shadow_trace_structural.py  audit_slack_replay.py  audit_source_owner_corpus.py  cache_smoke.py  cleanup_synthetic_announcements.py  compare_a2a_latency.py  compare_collections.py  evaluate_rag.py  (+35 more)
(+911 files in other folders)
