[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "university-support-system"
version = "1.0.0"
description = "RAG, LLM ve veritabanı çekirdeği içeren üniversite destek sistemi"
requires-python = ">=3.11"
readme = "README.md"
keywords = ["rag", "llm", "university", "turkish", "postgresql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "-v --tb=short"
markers = [
    "api: FastAPI giris noktasi ve HTTP yuzeyi testleri (mock bagimliliklarla)",
    "followup: Konusma baglami, follow-up cozumleme ve memory davranisi testleri",
    "integration: ChromaDB ve gerçek modeller gerektiren integration testler",
    "smoke: Hızlı bağlantı ve durum kontrolleri (model yüklemesi yok)",
    "model: Gerçek AI modelleri gerektiren testler (embedding, reranker)",
    "slow: Uzun süren kalite testleri (precision değerlendirme vb.)",
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", "migrations"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "migrations/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
